--- a/stay.css
+++ b/stay.css
@@ -3,3 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: aqua;
+}
+.imit{
+    text-align: center;
+    text-transform: uppercase;
+}
